--- a/css/main.css
+++ b/css/main.css
@@ -54,9 +54,19 @@ footer{
 	margin: 0 auto;
 }
 #address{
-	color: gray;
+	background-color: gray;
+	height:80px;
+	margin-top: 50px;
+	margin-bottom: 30px;
+	color: black;
 	font-family:arial;
+	vertical-align: middle;
 	text-align: right;
+
+}
+#address p{
+padding-top: 20px;
+padding-right: 5px;
 }
 
 /* for Professor tab*/
@@ -120,4 +130,18 @@ footer{
 
 #people{
 	margin-top: 20px;
+}
+/*for New tab*/
+#news_section{
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+#news_title{
+	margin-left: 40px;
+	font-family: arial;
+	font-size: 35px;
+}
+#news_desc{
+	font-family: arial;
+	font-size: 18px;
 }
